--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ env
 .env
 *.pyc
 __pycache__/
+static/images/communityAvatar/*
+static/images/communityBanner/*
+static/images/postImage/*
+static/images/userAvatar/*
