added event images directory to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ static/images/communityAvatar/*
 static/images/communityBanner/*
 static/images/postImage/*
 static/images/userAvatar/*
+static/images/eventImages/*
