--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,12 @@ env
 *.pyc
 __pycache__/
 static/images/communityAvatar/*
+!static/images/communityAvatar/.gitkeep
 static/images/communityBanner/*
+!static/images/communityBanner/.gitkeep
 static/images/postImage/*
+!static/images/postImage/.gitkeep
 static/images/userAvatar/*
+!static/images/userAvatar/.gitkeep
 static/images/eventImages/*
+!static/images/eventImages/.gitkeep
